apps/nzbget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/name: nzbget
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nzbget
      app.kubernetes.io/name: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vaultwarden
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
      - name: nzbget
        image: nzbgetcom/nzbget:latest
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /media
          name: media
      volumes:
      - name: config-base
        configMap:
          name: config
      - name: config-secret
        secret:
          name: config-secret
      - name: config
        emptyDir:
          sizeLimit: 10Mi
          medium: Memory
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: media
        persistentVolumeClaim:
          claimName: media
