apps/nzbget/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  annotations:
    meta.helm.sh/release-name: nzbget
    meta.helm.sh/release-namespace: nzbget
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/name: nzbget
spec:
  selector:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/name: nzbget
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
