apps/nzbget/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    meta.helm.sh/release-name: nzbget
    meta.helm.sh/release-namespace: nzbget
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/name: nzbget
spec:
  rules:
  - host: nzb.home.seanho.com
    http:
      paths:
      - backend:
          service:
            name: nzbget
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nzb.home.seanho.com
    secretName: nzbget-tls
